--- a/res/layout/activity_tip_calculator.xml
+++ b/res/layout/activity_tip_calculator.xml
@@ -33,22 +33,22 @@
             android:shadowDy="1"
             android:textAppearance="?android:attr/textAppearanceMedium" />
         
-
         <EditText
             android:id="@+id/etBillAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="60dip"
             android:layout_height="wrap_content"
-            android:singleLine="true"
             android:imeOptions="actionDone"
             android:inputType="numberDecimal"
+            android:singleLine="true"
             android:text="@string/base_amount" />
+
     </LinearLayout>
 
     <LinearLayout 
         android:id="@+id/llTipPercentLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dip"
+        android:layout_marginTop="30dip"
         android:layout_marginLeft="10dip"
         android:layout_below="@+id/llBaseAmount" 
         android:orientation="vertical" >
@@ -137,7 +137,7 @@
     <LinearLayout
         android:id="@+id/llNumPeopleLayout"
         android:layout_width="wrap_content"
-        android:layout_marginTop="50dip"
+        android:layout_marginTop="30dip"
         android:layout_marginLeft="10dip"
         android:layout_height="wrap_content"
         android:layout_below="@+id/llTipPercentLayout" 
@@ -177,14 +177,14 @@
 
         </LinearLayout>
  -->
-        <!-- <EditText
+        <EditText
             android:id="@+id/etNumPeople"
             android:layout_width="50dip"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:singleLine="true"
             android:ems="10" >
-        </EditText> -->    
+        </EditText>   
     </LinearLayout>
     
     <LinearLayout 
@@ -192,14 +192,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
+        android:layout_marginTop="30dip"
         android:layout_below="@+id/llNumPeopleLayout" 
         android:orientation="vertical" >
+        
+        <LinearLayout 
+            android:id="@+id/llTotalBillAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            
+            <TextView
+                android:id="@+id/tvTotalBillAmountString"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/total_bill_amount_string"
+                android:typeface="sans"
+                android:shadowColor="#7A7A7A"
+                android:shadowRadius="1.5"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+            
+            <TextView
+                android:id="@+id/tvTotalBillAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/base_tip"
+                android:layout_marginLeft="10dip"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
         
         <LinearLayout 
             android:id="@+id/llTotalTip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dip" 
             android:orientation="horizontal" >
             
             <TextView
@@ -265,20 +292,4 @@
             android:layout_height="wrap_content"
             android:text="" />
     </LinearLayout>
-
-    
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/llNumPeopleLayout"
-        android:layout_toRightOf="@+id/button1" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal" >
-        </LinearLayout>
-    </HorizontalScrollView>
-
 </RelativeLayout>
