--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -8,5 +8,9 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- API 14 theme customizations can go here. -->
     </style>
+    
+    <style name="BlackTheme" parent="android:Theme.Black">
+        <item name="android:textColor">#A4C739</item>
+    </style>
 
 </resources>
