--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,9 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="BlackTheme" parent="android:Theme.Black">
+        <item name="android:textColor">#A4C739</item>
+    </style>
 
 </resources>
